chwnet-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chwnet
  labels:
    app: chwnet
spec:
  replicas: 2  
  selector:
    matchLabels:
      app: chwnet
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: chwnet
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchLabels:
                app: chwnet
            topologyKey: kubernetes.io/hostname      
      containers:
      - image: jkozik/chw.net:v1
        name: chwnet
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            ephemeral-storage: 100M
            memory: 100M
          limits:
            ephemeral-storage: 200M
            memory: 200M          
        ports:
        - containerPort: 80
          name: chwnet
        volumeMounts:
        - name: chwcom-persistent-storage
          mountPath: "/var/www/html/mount" 
      volumes:
      - name: chwcom-persistent-storage
        persistentVolumeClaim:
          claimName: chwcom-persistent-storage
