chwnet-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: chwnet
  labels:
    app: chwnet
spec:
  ports:
    - port: 80
  selector:
    app: chwnet
  type: NodePort
